dnl Process this file with autoconf to produce a configure script.
AC_INIT()

THREADS_FLAG=
JMOL_HOME="$srcdir/.."
JAVA_LIB=/usr/lib/jdk1.1

#           Java 1.2 classpath:
#
#CLASSPATH=${JAVA_LIB}/jre/lib/rt.jar:${JMOL_HOME}/src:${JMOL_HOME}/jars/sax.jar:${JMOL_HOME}/jars/aelfred.jar:${JMOL_HOME}/jars/cml.jar:${JMOL_HOME}/jars/Acme.jar:${JMOL_HOME}/jars/vecmath1.1-1.12.jar:${JMOL_HOME}/jars/junit.jar:${JMOL_HOME}/jars/jas.jar


#           Java 1.1 classpath:
#
CLASSPATH=${JAVA_LIB}/lib/classes.zip:${JMOL_HOME}/src:${JMOL_HOME}/jars/swing.jar:${JMOL_HOME}/jars/multi.jar:${JMOL_HOME}/jars/sax.jar:${JMOL_HOME}/jars/aelfred.jar:${JMOL_HOME}/jars/cml.jar:${JMOL_HOME}/jars/Acme.jar:${JMOL_HOME}/jars/vecmath1.1-1.12.jar:${JMOL_HOME}/jars/junit.jar:${JMOL_HOME}/jars/jas.jar

AC_CHECK_CLASSPATH

AC_PROG_JAVAC
AC_PROG_JAVA($JAVA_HOME/java)
AC_PROG_JAR
AC_PROG_JAVADOC

AC_OUTPUT(Makefile)
